--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
@@ -26,7 +26,7 @@
       <nav class="navbar">
         <div id="navbar-img">
           <a href="#main-section">
-            <img src="images/logo.svg" alt=""></a>
+            <img src="logo.svg" alt=""></a>
         </div>
         <div id="navbar-items">
 
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div class="main-section-img-div">
-        <img src="images/illustration-1.svg" alt="">
+        <img src="illustration-1.svg" alt="">
       </div>
     </section>
 
@@ -86,19 +86,19 @@
               <p id="green-paragraph">See how Fylo works</p>
             </a>
             <a href="#">
-              <img src="images/icon-arrow.svg" alt="">
+              <img src="icon-arrow.svg" alt="">
             </a>
           </div>
         </div>
 
         <div class="second-section-content-card">
-          <img class="quote" src="images/icon-quotes.svg" alt="">
+          <img class="quote" src="icon-quotes.svg" alt="">
           <p>
             Fylo has improved our team productivity by an order of magnitude. Since
             making the switch our team has become a well-oiled collaboration machine.</p>
 
           <div id="card-pro">
-            <img src="images/avatar-testimonial.jpg" alt="">
+            <img src="avatar-testimonial.jpg" alt="">
 
             <div id="card-person-detail">
               <p id="person-name"> Kyle Burton</p>
@@ -112,7 +112,7 @@
       </div>
 
       <div id="second-section-img-div">
-        <img src="images/illustration-2.svg" alt="">
+        <img src="illustration-2.svg" alt="">
       </div>
 
     </section>
@@ -141,16 +141,16 @@
         <div class="contact">
 
           <div id="bottom-logo-img-div">
-            <img src="images/logo.svg" alt="">
+            <img src="logo.svg" alt="">
           </div>
 
           <div class="contact-type">
-            <img src="images/icon-phone.svg" alt="">
+            <img src="icon-phone.svg" alt="">
             <p>07501167153</p>
           </div>
 
           <div class="contact-type">
-            <img src="images/icon-email.svg" alt="">
+            <img src="icon-email.svg" alt="">
             <a href="mailto:dr.ahmad.salah.54@gmai.com">
               <p> dr.ahmad.salah.54@gmail.com</p>
             </a>
