--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
           Access them wherever you need, share and collaborate with friends,
           family, and co-workers.</p>
         <div class="input">
+          <div class="alert-email-input">
+            <p class="alert-email-message"></p>
+          </div>
           <input type="email" name="" id="" class="email-input" placeholder="example@gmail.com">
           <button class="sumbit-email-button">Get Started</button>
         </div>
